--- a/templates/about.html
+++ b/templates/about.html
@@ -10,7 +10,7 @@
                       <img src="https://source.unsplash.com/450x300/?code,html" class="card-img-top" alt="...">
                       <div class="card-body">
                           <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                          <p class="card-text">Someeeee quick example text to build on the card title and make up the bulk
                               of the card's content.</p>
                           <a href="#" class="btn btn-primary">Go somewhere</a>
                       </div>
